attempt to do battle of corsun'

--- a/test.html
+++ b/test.html
@@ -1,4 +1,7 @@
 <html>
+    <meta charset="UTF-8">
+    <!— TODO: Insert title-->
+    <title>Битви, йопта</title>
     <head>
         <script src="jquery-1.12.1.min.js"></script>
         <link href="test.css" rel="stylesheet">
@@ -6,7 +9,7 @@
         <script src="metro.min.js"></script>
         <script src="test.js"></script>
     </head>
-    <body onload="calculate()">
+    <body>
         <div class="grid condensed">
             <div class="row cells12">
                 <div class="cell"></div>
@@ -34,7 +37,7 @@
                                 Інфа за битву, за конкретний етап 
                             </div>
                             <div class="cell colspan9" id="container">
-                                <div class = "animater" id="anime"></div>
+                                <img src="Q8IqSO-lxP0.jpg">
                             </div>
                         </div>
                     </div>
