--- a/test.html
+++ b/test.html
@@ -1,13 +1,13 @@
 <html>
-    <meta charset="UTF-8">
-    <!— TODO: Insert title-->
-    <title>Битви, йопта</title>
     <head>
         <script src="jquery-1.12.1.min.js"></script>
         <link href="test.css" rel="stylesheet">
         <link href="metro.min.css" rel="stylesheet">
         <script src="metro.min.js"></script>
         <script src="test.js"></script>
+        <script src="pixi.js"></script>
+        <meta charset="UTF-8">
+        <title>Битви, йопта</title>
     </head>
     <body>
         <div class="grid condensed">
@@ -37,7 +37,7 @@
                                 Інфа за битву, за конкретний етап 
                             </div>
                             <div class="cell colspan9" id="container">
-                                <img src="Q8IqSO-lxP0.jpg">
+                                
                             </div>
                         </div>
                     </div>
@@ -45,5 +45,27 @@
                 <div class="cell"></div>
             </div>
         </div>
+        <script type="text/javascript">
+            $(document).ready(function(){
+                var renderer = new PIXI.CanvasRenderer(631, 536);
+                $("#container").append(renderer.view);
+                
+                var stage = new PIXI.Container();
+                var container = new PIXI.Container();
+                stage.addChild(container);
+
+                var bg = PIXI.Sprite.fromImage('map.jpg');
+                bg.width = renderer.width;
+                bg.height = renderer.height;
+                container.addChild(bg);
+
+                animate();
+
+                function animate(){
+                    renderer.render(stage);
+                    requestAnimationFrame(animate);
+                }
+            });
+        </script>
     </body>
 </html>
