--- a/test.html
+++ b/test.html
@@ -1,13 +1,14 @@
 <html>
-    <meta charset="UTF-8">
-    <!— TODO: Insert title-->
-    <title>Битви, йопта</title>
     <head>
+        <meta charset="UTF-8">
+        <!— TODO: Insert title-->
+        <title>Битви, йопта</title>
         <script src="jquery-1.12.1.min.js"></script>
         <link href="test.css" rel="stylesheet">
         <link href="metro.min.css" rel="stylesheet">
         <script src="metro.min.js"></script>
         <script src="test.js"></script>
+        <script src="pixi.min.js"></script>
     </head>
     <body>
         <div class="grid condensed">
