--- a/test.html
+++ b/test.html
@@ -22,57 +22,27 @@
                                     <li>
                                         <a href="#" class="dropdown-toggle">Битви</a>
                                         <ul class="d-menu" data-role="dropdown">
-                                            <li><a href="#" onclick="corsun()" >1</a></li>
+                                            <li><a href="#" onclick="corsun()" >Корсунська Битва</a></li>
                                             <li><a href="#">2</a></li>
                                             <li><a href="#">3</a></li>
                                         </ul>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="cell colspan8">
+                            <div class="cell"></div>
+                            <div class="cell colspan7">
                                 <h2 class="sub-leader" id="name">Назва битви</h2>
                             </div>
                         </div>
                         <div class="row cells12">
-                            <div class="cell colspan3">
-                                Інфа за битву, за конкретний етап
-                            </div>
-                            <div class="cell colspan9" id="container">
-
-                            </div>
+                            <div class="cell colspan3" id="text"></div>
+                            <div class="cell"></div>
+                            <div class="cell colspan8" id="container"></div>
                         </div>
                     </div>
                 </div>
                 <div class="cell"></div>
             </div>
         </div>
-<!--        <script type="text/javascript">
-            $(document).ready(function(){
-                var renderer = new PIXI.CanvasRenderer(631, 536);
-                $("#container").append(renderer.view);
-
-                var stage = new PIXI.Container();
-                var container = new PIXI.Container();
-                stage.addChild(container);
-
-                var bg = PIXI.Sprite.fromImage('map.jpg');
-                bg.width = renderer.width;
-                bg.height = renderer.height;
-                container.addChild(bg);
-
-                var infantry = PIXI.Sprite.fromImage('infantry.png');
-                infantry.anchor.x = 0.5;
-                infantry.anchor.y = 0.5;
-                infantry.position.set(200,200);
-                container.addChild(infantry);
-
-                animate();
-
-                function animate(){
-                    renderer.render(stage);
-                    requestAnimationFrame(animate);
-                }
-            });
-        </script> -->
     </body>
 </html>
