first battle done

--- a/test.html
+++ b/test.html
@@ -36,8 +36,12 @@
                         </div>
                         <div class="row cells12">
                             <div class="cell colspan3" id="text"></div>
-                            <div class="cell"></div>
-                            <div class="cell colspan8" id="container"></div>
+                            <div class="cell space"></div>
+                            <div class="cell colspan7" id="container"></div>
+                            <div class="cell">
+                                <div class="grid condensed" id="legend">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
