--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Битви, йопта</title>
+        <title>Битви Хмельниччини</title>
         <script src="jquery-1.12.1.min.js"></script>
         <link href="test.css" rel="stylesheet">
         <link href="metro.min.css" rel="stylesheet">
@@ -11,9 +11,9 @@
         <script src="battles.js"></script>
     </head>
     <body>
-        <div class="grid condensed">
+        <div class="grid mygrid">
             <div class="row cells12">
-                <div class="cell"></div>
+                <div class="cell grey"></div>
                 <div class="cell colspan10">
                     <div class="grid">
                         <div class="row cells12">
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cell"></div>
+                <div class="cell grey"></div>
             </div>
         </div>
     </body>
