--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
                 <div class="cell grey"></div>
                 <div class="cell colspan10">
                     <div class="grid">
-                        <div class="row cells12">
+                        <div class="row cells12 mygrid">
                             <div class="cell colspan3">
                                 <ul class="horizontal-menu">
                                     <li>
