Added turn1, made dummy methods

--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
                                         <a href="#" class="dropdown-toggle">Битви</a>
                                         <ul class="d-menu" data-role="dropdown">
                                             <li><a href="#" onclick="corsun()" >Корсунська Битва</a></li>
-                                            <li><a href="#">2</a></li>
+                                            <li><a href="#" onclick="jovti()">2</a></li>
                                             <li><a href="#">3</a></li>
                                         </ul>
                                     </li>
