--- a/test.html
+++ b/test.html
@@ -24,7 +24,7 @@
                                         <ul class="d-menu" data-role="dropdown">
                                             <li><a href="#" onclick="corsun()" >Корсунська Битва</a></li>
                                             <li><a href="#" onclick="jovti()">Битва під Жовтими Водами</a></li>
-                                            <li><a href="#">3</a></li>
+                                            <li><a href="#">Comming soon</a></li>
                                         </ul>
                                     </li>
                                 </ul>
